Only echo rules if specified; change default to align top to avoid stretch

--- a/scss/mixins/_flex.scss
+++ b/scss/mixins/_flex.scss
@@ -9,30 +9,24 @@ $to-flex: (
   space-evenly: space-evenly,
 );
 
-@mixin flex-row($fill: false, $align: null, $valign: null, $basis: null) {
+@mixin flex-row($fill: false, $align: null, $valign: top, $basis: null) {
   display: flex;
-  flex-basis: $basis;
   flex-direction: row;
+  @if $basis { flex-basis: $basis; }
+  @if $valign { align-items: map-get($to-flex, $valign); }
+  @if $align { justify-content: map-get($to-flex, $align); }
+  @if $fill { flex: 1 1 0; }
   min-width: 0;
   min-height: 0;
-  align-items: map-get($to-flex, $valign);
-  justify-content: map-get($to-flex, $align);
-
-  @if $fill {
-    flex: 1 1 0;
-  }
 }
 
 @mixin flex-column($fill: false, $align: null, $valign: null, $basis: null) {
   display: flex;
-  flex-basis: $basis;
   flex-direction: column;
+  @if $basis { flex-basis: $basis; }
+  @if $align { align-items: map-get($to-flex, $align); }
+  @if $valign { justify-content: map-get($to-flex, $valign); }
+  @if $fill { flex: 1 1 0; }
   min-width: 0;
   min-height: 0;
-  align-items: map-get($to-flex, $align);
-  justify-content: map-get($to-flex, $valign);
-
-  @if $fill {
-    flex: 1 1 0;
-  }
 }
